test/modules/privimp/a.d
import b; // privately imports c

enum x = y; // error

import d; // publicly imports e

enum z = w; // ok